# fmteach-

./: .gitignore  404.html  CMakeLists.txt  README.md  exercises.md~  getting_started.md~  index.html  index.md~
dockerbuild/: Dockerfile
docs/: mkdocs.yml
docs/docs/: getting_started.md  index.md
exercises/: CMakeLists.txt  exercices_plug.cpp  exercises.md~  exercises_plug.hpp
exercises/abstract/: exer.md~
exercises/abstract/exer/: index.html
exercises/cfa/: descr.md~
exercises/cfa/descr/: index.html
exercises/cfavis/: descr.md~
exercises/cfavis/descr/: index.html
exercises/execstate/: CMakeLists.txt  execstate.hpp
exercises/exer1/: exer.cpp  setup.hpp  solution.cpp
exercises/exer2/: CMakeLists.txt  exer.cpp  graph.cpp  setup.hpp  solution.cpp
exercises/exer3/: CMakeLists.txt  exer.cpp  setup.hpp  solution.cpp
exercises/exer4/: CMakeLists.txt  exer.cpp  graph.cpp  setup.hpp  solution.cpp
exercises/exer5/: CMakeLists.txt  exer.cpp  setup.hpp  solution.cpp
exercises/exercises/: index.html
exercises/interpreter/descr/: index.html
exercises/interpreter/exer/: index.html
exercises/mc/: exer.md~
exercises/mc/exer/: index.html
getting_started/: index.html
libs/: CMakeLists.txt
libs/hash/: CMakeLists.txt
libs/hash/include/: hash.hpp
libs/ir/: CMakeLists.txt
libs/ir/tests/: expr.cpp  (+1 more)
libs/whiley/: CMakeLists.txt
libs/whiley/src/: CMakeLists.txt  ast.cpp  compiler.cpp  lexer.l  parser.y  scanner.h  wparser.cpp
programs/: alltheletters.wh  error.wh  error2.wh  fibo.wh  ptr.wh  ptr_n.wh  stupid.wh
search/: search_index.json
(+14 files in other folders)
